// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`generate Edge cases handles empty spec: empty-spec-output 1`] = `
"import { z } from "zod";

// Path Functions
export const paths = {
} as const;

// Header Functions
export const headers = {
} as const;

// Operation Objects"
`;

exports[`generate Edge cases handles spec with no components: no-components-spec-output 1`] = `
"import { z } from "zod";

// Path Functions
export const paths = {
  getTest: () => "/test",
} as const;

// Header Functions
export const headers = {
  getTest: () => ({}),
} as const;

// Operation Objects
export const getTest = {
  path: paths.getTest,
} as const;
"
`;

exports[`generate Edge cases handles circular dependencies gracefully: circular-dependencies-output 1`] = `
"import { z } from "zod";

// Generated Zod Schemas

export const B = z.object({
  a: A.optional(),
});

export type B = z.infer<typeof B>;

export const A = z.object({
  b: B.optional(),
});

export type A = z.infer<typeof A>;

// Path Functions
export const paths = {
} as const;

// Header Functions
export const headers = {
} as const;

// Operation Objects"
`;
